  Google WebAccelerator and Desktop.
- Category and section sorts are now done case insensitively so that iTunes and
  uTorrent can show up in the right order.
- Added DOTTOUNDERSCORE_VERSION to convert 2.72 versions to 2_72.
- Changed default install directory in config.ini to environment variable 
  %ProgramFiles% which points to the Windows "Program Files" directory.

Bug Fixes
- If install/uninstall failed for whatever reason, AppSnap still assumed that
  everything worked fine. We now check the return codes of the installer and
  fail if non-zero.
- Reload function was not deleting all process objects which were retaining the
  configuration loaded previously.
- Uninstallation was using the latest version of an application instead of the
  installed version during version text replacements. If installed version is
  not available, the latest version is used.

Version 1.1
-----------
New Applications
- Internet : Azureus, Gaim, Miranda, Thunderbird, WinSCP
- Entertainment : CDex, Songbird, VideoLAN
- Productivity: Audacity, BurnAtOnce, Nvu, Vim
- Utilities : AutoHotKey, CCleaner, ClamWin

GUI Enhancements
- Replaced install/uninstall buttons with a nice toolbar.
- Added buttons to download and upgrade applications.
- Added an update database button that gets latest version of db.ini from SVN.
- AppSnap can now reload the configuration by clicking the reload button.
- All installed applications can be filtered by selecting the 'Installed'
  category in the dropdown menu.
- Increased default width and height of GUI to fit toolbar and more applications.

CLI Enhancements
- Update database with the latest version of db.ini from SVN using -U.
- Filter all installed applications using filter -f Installed.

Internal Improvements
- AppSnap now remembers the application versions that it installs.
- Older versions of an application's installer are now deleted when a newer
  version is downloaded.