@@ -25,6 +25,7 @@ Internal Improvements
 - Added DOTTOUNDERSCORE_VERSION to convert 2.72 versions to 2_72.
 - Changed default install directory in config.ini to environment variable 
   %ProgramFiles% which points to the Windows "Program Files" directory.
+- When run with -d, the GUI now logs debugging information to debug.log.
 
 Bug Fixes
 - If install/uninstall failed for whatever reason, AppSnap still assumed that
